--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./output/tailwind.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="bg-blue-700 p-10 ml-5"> hii</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./output/tailwind.css" />
+    <title>Home Smart</title>
+  </head>
+  <body class="bg-white text-neutral-900">
+    <nav class="mx-auto bg-amber-400 p-5">
+      <div class="container flex mx-auto items-center justify-center">
+        <a
+          href="/"
+          class="focus:outline-none
+          focus-visible:ring-4
+          ring-neutral-900
+          rounded-sm
+          ring-offset-4
+          ring-offset-amber-400
+          lg:absolute
+          lg:left-1/2
+          lg:-translate-x-1/2
+          lg:top-9
+          z-50
+          hover:opacity-75
+          transition-opacity"
+        >
+          <img src="/assets/logo.svg" width="200" alt="" />
+        </a>
+        <button class="lg:hidden
+        rounded-sm
+        ring-offset-4
+        ml-auto
+        ">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+        <div
+          id="menu-bar"
+          class="hidden
+          flex-col
+          gap-4
+          absolute
+          right-0
+          left-0
+          top-16
+          bg-amber-400
+          text-center
+          p-6
+          items-center
+          lg:flex
+          lg:flex-row
+          lg:static
+          lg:justify-between
+          lg:w-full"
+        >
+          <a href="">Home</a>
+          <a href="" class="lg:mr-auto">Contact</a>
+          <a href="">About</a>
+          <a href="">Log In</a>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
