--- a/index.html
+++ b/index.html
@@ -9,41 +9,32 @@
   </head>
   <body class="bg-white text-neutral-900">
     <nav class="mx-auto bg-amber-400 p-5">
-      <div class="container
-      mx-auto
-      flex
-      items-center
-      justify-between">
+      <div class="container mx-auto flex items-center justify-between">
         <a
           href="/"
-          class=" focus:outline-none
-        focus-visible:ring-4
-        ring-neutral-900
-        rounded-sm
-        ring-offset-4
-        ring-offset-amber-400
-        lg:absolute
-        lg:left-1/2
-        lg:-translate-x-1/2
-        lg:top-9
-        z-50
-        hover:opacity-75
-        transition-opacity"
+          class="focus:outline-none focus-visible:ring-4 ring-neutral-900 z-50  rounded-sm ring-offset-4 ring-offset-amber-400 lg:absolute lg:left-1/2 lg:-translate-x-1/2 lg:top-9  hover:opacity-75 transition-opacity"
         >
           <img src="/assets/logo.svg" class="w-48" width="200" alt="" />
         </a>
-        <button id="menu-btn"aria-expanded="false" class="lg:hidden ">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-          stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
+        <button id="menu-btn" aria-expanded="false" class="lg:hidden">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
         </button>
         <div
-          id="menu-bar" 
-          class=" hidden  flex-col gap-4
-          absolute right-0 left-0 top-16
-           bg-amber-400 text-center p-6 items-center lg:flex lg:flex-row
-            lg:static lg:justify-between lg:w-full"
+          id="menu-bar"
+          class="hidden flex-col gap-4 absolute right-0 left-0 top-16 z-40 bg-amber-400 text-center p-6 items-center lg:flex lg:flex-row lg:static lg:justify-between lg:w-full"
         >
           <a href="">Home</a>
           <a href="" class="lg:mr-auto">Contact</a>
@@ -53,16 +44,35 @@
       </div>
     </nav>
 
+    <header class="relative pt-16 md:pt-24 lg:pt-48">
+      <div
+        class="absolute inset-0  bottom-8 bg-amber-400 -z-10"
+      ></div>
+      <div class="container grid grid-rows-1 pt-4 place-items-center">
+        <img
+          src="./assets/couch.png"
+          class="row-start-1 row-end-1 col-start-1 col-end-1 w-15"
+          alt="Couch"
+        />
+        <img
+          src="./assets/app.svg"
+          class="row-start-1 row-end-1 col-start-1 col-end-1  w-40 sm:w-52
+          md:w-64
+          lg:w-72"
+          alt="app"
+        />
+      </div>
+    </header>
 
     <script>
-      let menubar=document.querySelector("#menu-bar");
-      let menubtn=document.querySelector("#menu-btn");
-      menubtn.addEventListener("click",(e)=>{
-        let ariaexpanded=JSON.parse(menubtn.getAttribute("aria-expanded"))
-        menubtn.setAttribute("aria-expanded",!ariaexpanded);
+      let menubar = document.querySelector("#menu-bar");
+      let menubtn = document.querySelector("#menu-btn");
+      menubtn.addEventListener("click", (e) => {
+        let ariaexpanded = JSON.parse(menubtn.getAttribute("aria-expanded"));
+        menubtn.setAttribute("aria-expanded", !ariaexpanded);
         menubar.classList.toggle("hidden");
         menubar.classList.toggle("flex");
-      })
+      });
     </script>
   </body>
 </html>
