--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container mx-auto flex items-center justify-between">
         <a
           href="/"
-          class="focus:outline-none focus-visible:ring-4 ring-neutral-900 z-50  rounded-sm ring-offset-4 ring-offset-amber-400 lg:absolute lg:left-1/2 lg:-translate-x-1/2 lg:top-9  hover:opacity-75 transition-opacity"
+          class="focus:outline-none focus-visible:ring-4 ring-neutral-900 z-50 rounded-sm ring-offset-4 ring-offset-amber-400 lg:absolute lg:left-1/2 lg:-translate-x-1/2 lg:top-9 hover:opacity-75 transition-opacity"
         >
           <img src="/assets/logo.svg" class="w-48" width="200" alt="" />
         </a>
@@ -45,9 +45,7 @@
     </nav>
 
     <header class="relative pt-16 md:pt-24 lg:pt-48">
-      <div
-        class="absolute inset-0  bottom-8 bg-amber-400 -z-10"
-      ></div>
+      <div class="absolute inset-0 bottom-8 bg-amber-400 -z-10"></div>
       <div class="container grid grid-rows-1 pt-4 place-items-center">
         <img
           src="./assets/couch.png"
@@ -56,13 +54,124 @@
         />
         <img
           src="./assets/app.svg"
-          class="row-start-1 row-end-1 col-start-1 col-end-1  w-40 sm:w-52
-          md:w-64
-          lg:w-72"
+          class="row-start-1 row-end-1 col-start-1 col-end-1 w-40 sm:w-52 md:w-64 lg:w-72"
           alt="app"
         />
       </div>
     </header>
+
+    <main class="grid gap-12 overflow-hidden my-3">
+      <a
+        href=""
+        class="flex gap-2 bg-amber-400 px-5 py-2 text-center mx-auto rounded my-12"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
+          />
+        </svg>
+        <span>Download The App</span></a
+      >
+      <div class="relative">
+        <img src="assets/dots.svg" class=" hidden
+        lg:block
+        absolute
+        top-1/2
+        -translate-y-1/2
+        -left-24
+        xl:-left-7" alt="" srcset="">
+        <img src="assets/dots.svg" class=" hidden
+        lg:block
+        absolute
+        top-1/2
+        -translate-y-1/2
+        -right-24
+        xl:-right-7" alt="" srcset="">
+        <div
+          class="container mx-auto max-w-5xl flex gap-12 flex-wrap items-center justify-center md:justify-between"
+        >
+          <div class="grid gap-4 justify-items-center text-center md:flex-1">
+            <div class="rounded-full border-8 border-amber-400 p-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-14 w-14"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
+                />
+              </svg>
+            </div>
+            <h3 class="text-4xl font-bold p-2">Safe</h3>
+            <p class="">
+              Lorem ipsum dolor, sit amet! Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. In, officia.
+            </p>
+          </div>
+
+          <div class="grid gap-4 justify-items-center text-center md:flex-1">
+            <div class="rounded-full border-8 border-amber-400 p-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-14 w-14"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
+                />
+              </svg>
+            </div>
+            <h3 class="text-4xl font-bold p-2">Safe</h3>
+            <p class="">
+              Lorem ipsum dolor, sit amet! Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. In, officia.
+            </p>
+          </div>
+
+          <div class="grid gap-4 justify-items-center text-center md:flex-1">
+            <div class="rounded-full border-8 border-amber-400 p-8">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-14 w-14"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
+                />
+              </svg>
+            </div>
+            <h3 class="text-4xl font-bold p-2">Safe</h3>
+            <p class="">
+              Lorem ipsum dolor, sit amet! Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. In, officia.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script>
       let menubar = document.querySelector("#menu-bar");
